btb managers subscribtions feature actualize translation
